# generics

./: .gitignore  LICENSE  README.md  Requirements.md  Specifications.md  Syntax.md  Use_cases_and_requirements.md  Use_cases_and_requirements.tex  Value System.md  ideas_for_further_features.md  requirements.txt
J3-Papers/: 21-144r1.txt  24-105.txt  24-105d1.txt  24-106.txt  Generics_Requirements.txt  Generics_Specs.txt  Generics_Use_Cases.txt  README.md  additional_features.txt  bound_and_keyword_status.txt  constant_bounds_status.txt  deferred-polymorphic.txt  detached-template-procedures.txt  export-generic.txt  full_syntax.txt  generic_syntax_paper_for_meeting_231.txt  i-cant-get-no.txt  instantiate_specs.txt  instantiation_semantics.txt  interface-syntax.txt  keyword_argument_status.txt  keyword_arguments_Donev.txt  kind_and_rank_constants.txt  logical-requirements.txt  misc-template-edits.txt  new_syntax_paper.txt  rank_agnostic_TBPs_Donev.txt  requirement-syntax.txt  requirement_specs.txt  requirements-and-specs-for-simplified-template-procedures.txt  requirements-revised.txt  requires-syntax.txt  restriction_and_requires.txt  signatures_Donev.txt  standalone-instantiation-syntax.txt  syntax-intro-and-deferred-args.txt  syntax-paper.txt  syntax-requirement-and-requires.txt  syntax-template-and-instantiate.txt  template-scoping.txt  (+5 more)
scenarios/: cayley-dickson.F90  generic-swap.F90  generic_matmul.f90  map-function.F90  (+5 more)
scenarios/Block_Matrix/: CMakeLists.txt  GenericBlockMatrixMultiply.F90  Intel.cmake  NAG.cmake  NestedBlock.F90  SimpleBlock.F90  driver.F90
(+197 files in other folders)
